# Polkasend

./: .env.example  .gitignore  README.md  next.config.mjs  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
app/: layout.tsx  page.tsx
app/api/_lib/: runtimeMode.ts
app/api/kyc/: route.ts
app/api/rates/: route.ts
app/api/remittance/: route.ts
app/dashboard/: page.tsx
app/send/: page.tsx
app/track/: page.tsx
backend/: .env.example  package.json  server.js  tsconfig.json  vitest.config.ts
backend/prisma/: schema.prisma
backend/routes/: kyc.js  rates.js  remittance.js  transactions.js
backend/src/: index.ts
backend/src/config/: logger.ts
backend/src/lib/: prisma.ts
backend/src/middleware/: errorHandler.ts  idempotency.ts  requestContext.ts
backend/src/repositories/: fileStore.ts  kycRepository.ts  remittanceOrderRepository.ts
backend/src/routes/: health.ts  kyc.ts  oracle.ts  quote.ts  rates.ts  remittance.ts
backend/src/services/: fxOracle.ts  kycService.ts  remittanceService.ts
backend/src/services/fx/: aggregator.ts
backend/src/services/upi/: settlement.ts
backend/src/workers/: chainWatcher.ts
backend/tests/: fxOracle.test.js  fxOracle.test.ts  kycService.test.ts  remittanceService.test.js  remittanceService.test.ts
components/layout/: Navbar.tsx
components/logo/: PolkaSendLogo.tsx
components/remittance/: FeeBreakdown.tsx  KycBanner.tsx  NetworkStatus.tsx  SendForm.tsx  TransactionModal.tsx  XcmRoute.tsx  index.tsx
contracts/: Cargo.toml  README.md
contracts/interfaces/: pallet_types.ts
contracts/src/pallets/fiat_bridge/: Cargo.toml  lib.rs
contracts/src/pallets/fiat_bridge/src/: lib.rs
contracts/src/pallets/kyc/: Cargo.toml  lib.rs
contracts/src/pallets/kyc/src/: lib.rs
contracts/src/pallets/rate_lock/: Cargo.toml  lib.rs
contracts/src/pallets/rate_lock/src/: lib.rs
contracts/src/pallets/remittance/: Cargo.toml  lib.rs
contracts/src/pallets/remittance/src/: lib.rs
contracts/src/runtime/: Cargo.toml
contracts/src/runtime/src/: lib.rs
contracts/src/xcm/: config.rs
contracts/xcm/: xcm_config.rs
deployment/: Dockerfile.parachain  README.md  deploy-parachain.sh  docker-compose.yml  package.json
deployment/scripts/: setup-chain.ts
lib/polkadot/: api.ts  remittanceStore.ts  signer.ts  walletStore.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/kyc/: route.ts
src/app/api/rates/: route.ts
src/app/api/remittance/: route.ts
src/app/send/: page.tsx
src/components/dashboard/: HeroStats.tsx
src/components/layout/: Navbar.tsx
src/components/logo/: PolkaSendLogo.tsx
src/components/send/: FeeBreakdown.tsx  KycBar.tsx  SendModal.tsx  SendPanel.tsx  XcmRoute.tsx
src/lib/polkadot/: api.ts
src/store/: index.ts
src/types/: index.ts
styles/: globals.css
