[package]
name = "polkasend-runtime"
version = "0.1.0"
edition = "2021"
description = "PolkaSend parachain runtime (Para #3000)"
license = "Apache-2.0"

[dependencies]
pallet-kyc = { path = "../pallets/kyc", default-features = false }
pallet-remittance = { path = "../pallets/remittance", default-features = false }
pallet-rate-lock = { path = "../pallets/rate_lock", default-features = false }
pallet-fiat-bridge = { path = "../pallets/fiat_bridge", default-features = false }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-assets = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
xcm = { workspace = true }
xcm-builder = { workspace = true }
pallet-xcm = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true }
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }

[features]
default = ["std"]
std = ["frame-support/std","frame-system/std","sp-runtime/std","sp-std/std","xcm/std","scale-info/std","parity-scale-codec/std","pallet-kyc/std","pallet-remittance/std","pallet-rate-lock/std","pallet-fiat-bridge/std"]
