[package]
name = "pallet-kyc"
version = "0.1.0"
edition = "2021"
authors = ["PolkaSend Team"]
description = "KYC/AML compliance pallet for PolkaSend parachain"
license = "Apache-2.0"

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }
log = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "scale-info/std",
    "parity-scale-codec/std",
]
runtime-benchmarks = ["frame-support/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
