[package]
name = "pallet-remittance"
version = "0.1.0"
edition = "2021"
description = "Core remittance logic pallet for PolkaSend"
license = "Apache-2.0"

[dependencies]
pallet-kyc = { path = "../kyc", default-features = false }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-assets = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }
xcm = { workspace = true }
pallet-xcm = { workspace = true }
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }
log = { workspace = true }

[features]
default = ["std"]
std = ["frame-support/std","frame-system/std","pallet-assets/std","sp-runtime/std","sp-std/std","sp-io/std","xcm/std","pallet-xcm/std","scale-info/std","parity-scale-codec/std","pallet-kyc/std"]
