[package]
name = "pallet-remittance"
version = "0.1.0"
edition = "2021"
description = "Core remittance logic pallet for PolkaSend"
license = "Apache-2.0"

[dependencies]
pallet-kyc = { path = "../kyc", default-features = false }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-assets = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }
log = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = ["frame-support/std","frame-system/std","pallet-assets/std","sp-runtime/std","sp-std/std","sp-io/std","scale-info/std","parity-scale-codec/std","pallet-kyc/std"]
